Revised the daemon and changed DNS pattern
Instead of using separate start and stop scripts, dotbow is using the
daemons gem fully to manage the daemon now.
An optional (www\.)? added to the dns matching patterns. so
DIRECTORY_NAME.dev and www.DIRECTORY_NAME.dev are both redirected to
127.0.0.1.

--- a/templates/vhost.erb
+++ b/templates/vhost.erb
@@ -1,5 +1,6 @@
 <VirtualHost *:80>
   ServerName <%= domain_name %>
+  ServerAlias *.<%= domain_name %>
   DocumentRoot "<%= document_root %>"
   DirectoryIndex index.html index.php
   <Directory "<%= document_root %>">
