working on installer

--- a/templates/com.bow.bowd.plist.erb
+++ b/templates/com.bow.bowd.plist.erb
@@ -6,7 +6,7 @@
 	<string>com.bow.bowd</string>
 	<key>ProgramArguments</key>
 	<array>
-		<string>"<%= bow_path %>"</string>
+		<string>"<%= bow_path %>/control run"</string>
 		<string>start</string>
 	</array>
 	<key>KeepAlive</key>
